# nlp_utils

./: README.md  pyproject.toml
data/common/: emoticons.csv
src/nlp_utils/: file_parsers.py  preprocessor.py  simple_tokenizer.py  string_utils.py  unicode_blocks.py  unicode_scripts.py
tests/: test_blocks.py  test_file_parsers.py  test_preprocessor.py  test_scripts.py  test_string_utils.py  test_text_prep.py  test_tokenizer.py
tests/data/: eng_tokenization.txt  hashtags_lcmdb.csv  tweets_4_hashtag_analysis.txt
